--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tristan Taylor Music</h1>
-    <a href="/signup.html"></a>
+    <a href="/signup.html"> sign up here </a>
     <p>Tristan Taylor Music</p>
 </body>
 </html>
